# 3DEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Data/Engine/Materials/: Default.ovmat  pbr.ovmat  pbrmable.ovmat
Data/Engine/Shaders/: Lambert.glsl  Standard.glsl  StandardPBR.glsl  Unlit.glsl  pbr02.glsl  pbrwithpostprocess.glsl
Data/Engine/pbr/: scene1.ovscene
Note/: README.md  note.md  note.vsdx
PathTrace/: .gitignore  CMakeLists.txt  main.cpp
PathTrace/src/RadeonRays/: bbox.cpp  bbox.h  bvh.cpp  bvh.h  bvh_translator.cpp  bvh_translator.h
PathTrace/src/core/: Camera.cpp  Camera.h  Config.h  EnvironmentMap.cpp  EnvironmentMap.h  Material.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderIncludes.h  Texture.cpp  Texture.h  rawshader.cpp  rawshader.h
PathTrace/src/loaders/: GLTFLoader.cpp  GLTFLoader.h  Loader.cpp  Loader.h
PathTrace/src/math/: Mat4.h  MathUtils.h  Vec2.h  Vec3.h  Vec4.h
PathTrace/src/shaders/: PathTrace.glsl
PathTrace/src/tinygltf/: tiny_gltf.h
PathTrace/src/tinyobjloader/: tiny_obj_loader.h
Resource/Shader/: bloom.glsl  cull.glsl  environment_BRDF.glsl  equirect2cube.glsl  infinite_grid.glsl  irradiance_map.glsl  light.glsl  model.glsl  pbr01.glsl  pbr02.glsl  pbr03.glsl  pbr04.glsl  pbr05.glsl  post_process.glsl  post_process01.glsl  post_process02.glsl  post_process03.glsl  post_process04.glsl  post_process05.glsl  prefilter_envmap.glsl  shadow.glsl  shadow05.glsl  skybox.glsl  skybox01.glsl
Source/: CMakeLists.txt  main.cpp
Source/OvEditor/: OvEditor.aps
Source/OvEditor/include/OvEditor/Core/: Application.h  CameraController.h  Editor.h  EditorActions.h  EditorRenderer.h
Source/OvEditor/include/OvEditor/Panels/: AView.h  AssetBrowser.h  AssetView.h  SceneView.h
Source/OvEditor/include/OvEditor/Utils/: ext.h
Source/OvEditor/src/OvEditor/: Main.cpp
Source/OvEditor/src/OvEditor/Core/: Application.cpp  CameraController.cpp  Context.cpp  Editor.cpp  EditorActions.cpp  EditorRenderer.cpp  EditorResources.cpp  ProjectHub.cpp
Source/OvEditor/src/OvEditor/Panels/: AView.cpp  AssetBrowser.cpp  AssetView.cpp  GameView.cpp  MaterialEditor.cpp  MenuBar.cpp  SceneView.cpp
Source/OvEditor/src/OvEditor/Resources/: RawShaders.cpp
Source/OvEditor/src/OvEditor/Utils/: ext.cpp
Source/example/: scene_05.cpp  scene_05.h
TestImGui/: CMakeLists.txt  main.cpp
